--- a/Index.cshtml
+++ b/Index.cshtml
@@ -123,7 +123,7 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-6 text-center">
 					<div class="section-title">
-						<h1>Sản Phẩm mới nhất</h1>
+						<h1>Sản phẩm mới nhất</h1>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
 							dolore
