--- a/Index.cshtml
+++ b/Index.cshtml
@@ -1,6 +1,6 @@
 @model Nhom8_WebSiteBanGiay.Models.HomeModels
 
-<!-- start features Area -->
+<!-- start fe
 <section class="features-area section_gap">
 	<div class="container">
 		<div class="row features-inner">
